tests/react_jsx_fragments/react_jsx_fragments.exp
Error --------------------------------------------------------------------------------------------- embedded_ltgt.js:4:1

Unexpected token ILLEGAL

   4|
      


Error ---------------------------------------------------------------------------------------- incorrect_token_lt.js:3:4

Unexpected token `<`, expected the token `>`

   3| <><</>; // Error: `<` is not a valid token here.
         ^


Error ------------------------------------------------------------------------------ nonmatching_closing_element.js:3:17

Expected corresponding JSX closing tag for JSX fragment

   3| <></elementName>; // Error: `elementName` is not a valid token here.
                      ^


Error ------------------------------------------------------------------------------ nonmatching_opening_element.js:3:17

Expected corresponding JSX closing tag for elementName

   3| <elementName></>; // Error: `elementName` is not a valid token here.
                      ^



Found 4 errors
